--- a/README
+++ b/README
@@ -1,45 +1,15 @@
-xv6 is a re-implementation of Dennis Ritchie's and Ken Thompson's Unix
-Version 6 (v6).  xv6 loosely follows the structure and style of v6,
-but is implemented for a modern RISC-V multiprocessor using ANSI C.
+# MIT 6.S081 Introduction to Operating Systems
 
-ACKNOWLEDGMENTS
+## progress
 
-xv6 is inspired by John Lions's Commentary on UNIX 6th Edition (Peer
-to Peer Communications; ISBN: 1-57398-013-7; 1st edition (June 14,
-2000)). See also https://pdos.csail.mit.edu/6.828/, which
-provides pointers to on-line resources for v6.
-
-The following people have made contributions: Russ Cox (context switching,
-locking), Cliff Frey (MP), Xiao Yu (MP), Nickolai Zeldovich, and Austin
-Clements.
-
-We are also grateful for the bug reports and patches contributed by
-Silas Boyd-Wickizer, Anton Burtsev, Dan Cross, Cody Cutler, Mike CAT,
-Tej Chajed, Asami Doi, eyalz800, , Nelson Elhage, Saar Ettinger, Alice
-Ferrazzi, Nathaniel Filardo, Peter Froehlich, Yakir Goaron,Shivam
-Handa, Bryan Henry, jaichenhengjie, Jim Huang, Alexander Kapshuk,
-Anders Kaseorg, kehao95, Wolfgang Keller, Jonathan Kimmitt, Eddie
-Kohler, Austin Liew, Imbar Marinescu, Yandong Mao, Matan Shabtay,
-Hitoshi Mitake, Carmi Merimovich, Mark Morrissey, mtasm, Joel Nider,
-Greg Price, Ayan Shafqat, Eldar Sehayek, Yongming Shen, Fumiya
-Shigemitsu, Takahiro, Cam Tenny, tyfkda, Rafael Ubal, Warren Toomey,
-Stephen Tu, Pablo Ventura, Xi Wang, Keiichi Watanabe, Nicolas
-Wolovick, wxdao, Grant Wu, Jindong Zhang, Icenowy Zheng, and Zou Chang
-Wei.
-
-The code in the files that constitute xv6 is
-Copyright 2006-2020 Frans Kaashoek, Robert Morris, and Russ Cox.
-
-ERROR REPORTS
-
-Please send errors and suggestions to Frans Kaashoek and Robert Morris
-(kaashoek,rtm@mit.edu). The main purpose of xv6 is as a teaching
-operating system for MIT's 6.S081, so we are more interested in
-simplifications and clarifications than new features.
-
-BUILDING AND RUNNING XV6
-
-You will need a RISC-V "newlib" tool chain from
-https://github.com/riscv/riscv-gnu-toolchain, and qemu compiled for
-riscv64-softmmu. Once they are installed, and in your shell
-search path, you can run "make qemu".
+- [x] [Lab util: Unix utilities](https://github.com/gaofanfei/xv6-riscv-fall20/tree/util)
+- [x] [Lab syscall: System calls](https://github.com/gaofanfei/xv6-riscv-fall20/tree/syscall)
+- [x] [Lab pgtbl: Page tables](https://github.com/gaofanfei/xv6-riscv-fall20/tree/pgtbl)
+- [x] [Lab traps: Trap](https://github.com/gaofanfei/xv6-riscv-fall20/tree/traps)
+- [x] [Lab lazy: Lazy allocation](https://github.com/gaofanfei/xv6-riscv-fall20/tree/lazy)
+- [ ] [Lab cow: Copy-on-write fork](https://pdos.csail.mit.edu/6.828/2020/labs/cow.html)
+- [ ] [Lab thread: Multithreading](https://pdos.csail.mit.edu/6.828/2020/labs/thread.html)
+- [ ] [Lab lock: Parallelism/locking](https://pdos.csail.mit.edu/6.828/2020/labs/lock.html)
+- [ ] [Lab fs: File system](https://pdos.csail.mit.edu/6.828/2020/labs/fs.html)
+- [ ] [Lab mmap: Mmap](https://pdos.csail.mit.edu/6.828/2020/labs/mmap.html)
+- [ ] [Lab net: Network stack](https://pdos.csail.mit.edu/6.828/2020/labs/net.html)
